# mental-health-ai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose-local-embedding.yml  docker-compose.yml  pyproject.toml
client/: index.html
data/: documents.json
data/example/: example.json
data/processed/articles/manual/: screen_media_use_and_ADHD-related_behaviors:_Four_decades_of_research.json
data/processed/articles/scrapped/: a_captura_da_subjetividade_de_bancários_como_tecnologia_gerencial:_estudo_de_um_instrumento_de_avaliação_de_desempenho_gerencial.json  a_infância_e_a_adolescência_na_política_de_saúde_mental:_uma_análise_por_meio_dos_conselheiros_e_conferências_de_saúde_mental.json  a_tomada_de_decisão_no_tratamento_de_crianças_com_indicadores_de_tdah.json  acesso_e_cuidado_a_saúde_de_mulheres_privadas_de_liberdade_na_penitenciária_cearense.json  ainda_dói_tudo_na_minha_memória:_a_urgência_do_campo_dos_direitos_raciais_para_o_alvorecer_da_contracolonização_ainda_memória_memória.json  ansiedade_e_depressão_em_trabalhadores_de_saúde_de_uti_covid-19_em_um_hospital_de_referência_covid19_covid_19_covid-1_covid1_1_covid-.json  arranjos_assistenciais_em_uma_rede_atenção_psicossocial_no_sul_do_brasil.json  caminhos_e_intermediações_entre_serviços_do_sistema_de_saúde_e_da_socioeducação.json  (+63 more)
data/raw/: transtornos_mentais_e_comportamentais.json
data/raw/articles/: articles_metadata.json
mental_health_ai/: main.py  settings.py
mental_health_ai/processing_raw_data/: article_scraper.py  process_articles.py  process_articles_pdf.py  process_dsm5_pdf.py  run.py  utils.py
mental_health_ai/rag/: rag.py
mental_health_ai/rag/database/: db_interface.py  utils.py  weaviate_impl.py
mental_health_ai/rag/llm/: llm_interface.py  ollama_impl.py  openai_impl.py
mental_helth_ai/: main.py  settings.py
mental_helth_ai/db_knowledge/CID/: create_json_with_details.py  transform_json_into_langchain_docs.py
mental_helth_ai/db_knowledge/DSM5/: loading_data_from_json.py  process_dsm5_pdf.py  utils.py
mental_helth_ai/db_knowledge/DSM5.py/: process_dsm5_pdf.py
mental_helth_ai/db_knowledge/articles/: process_articles_pdf.py
mental_helth_ai/dependencies/: get_db.py
mental_helth_ai/processing_raw_data/: article_scraper.py  process_articles.py  process_articles_pdf.py  process_dsm5_pdf.py  run.py  transform_json_into_langchain_docs.py
mental_helth_ai/rag/: rag.py
mental_helth_ai/rag/database/: db_interface.py  faiss_db_impl.py  schemas.py  weaviate_db.py  weaviate_impl.py
mental_helth_ai/rag/embedding/: embedding_interface.py  sentence_transformer_impl.py
mental_helth_ai/rag/llm/: llm_interface.py  ollama_impl.py  openai_impl.py  phi_3_impl.py
tests/: conftest.py  test_schemas.py  test_weaviate_impl  test_weaviate_impl.py
